additional pages and hidden links on new psd pgs

--- a/app/assets/sass/opss/_opss-shared.scss
+++ b/app/assets/sass/opss/_opss-shared.scss
@@ -99,6 +99,14 @@ body.js-enabled .opss-nojs-hide {
     }
 }
 
+.opss-hidden-desktop {
+    visibility: visible; 
+
+    @include govuk-media-query($from: desktop) {
+        visibility: hidden;
+    }    
+}
+
 .opss-float-left {
     float: left;
 }
