--- a/app/views/psd-revised-flow/case-trading-stds-landing_warnings.html
+++ b/app/views/psd-revised-flow/case-trading-stds-landing_warnings.html
@@ -47,7 +47,7 @@
             <span class="govuk-warning-text__icon" aria-hidden="true">!</span>
             <strong class="govuk-warning-text__text">
                 <span class="govuk-warning-text__assistive">Warning</span>
-                There are no Products, Businesses, or Risk assessments linked to, or added to, this case.
+                There are no products, businesses, or risk assessments <br class="opss-br-desktop">included with this case.
             </strong>
         </div>
         <!-- if a trading stds user - end -->
