--- a/app/views/psd-revised-flow/index.html
+++ b/app/views/psd-revised-flow/index.html
@@ -111,10 +111,32 @@
                     
                     <ul class="govuk-list govuk-list--bullet">
                         <li>
-                            <a class="govuk-link govuk-link--no-visited-state" href="/psd-revised-flow/products-2-products.html" target="_blank">Trading Standards - Products x2 page </a> <i>Showing two products linked to the one case.</i>                    
+                            <a class="govuk-link govuk-link--no-visited-state" href="/psd-revised-flow/products-2-products.html" target="_blank">Trading Standards - Products x2 page</a> Showing two products linked to the one case. The text and missing edit link for a product record owned by another team and a product record without an owner.
                         </li>
                     </ul>
                 </li>
+                <li>
+                    <a class="govuk-link govuk-link--no-visited-state" href="/psd-revised-flow/contact-prod-owner.html" target="_blank">Email the product record owner</a> 
+                    
+                    <ul class="govuk-list govuk-list--bullet">
+                        <li>
+                            <a class="govuk-link govuk-link--no-visited-state" href="/psd-revised-flow/contact-prod-owner-sent.html" target="_blank">Email sent</a>       
+                        </li>
+                    </ul>
+                </li> 
+                <li>
+                    <a class="govuk-link govuk-link--no-visited-state" href="/psd-revised-flow/remove-product.html" target="_blank">Remove the product record</a> from the case
+                    
+                    <ul class="govuk-list govuk-list--bullet">
+                        <li>
+                            <a class="govuk-link govuk-link--no-visited-state" href="/psd-revised-flow/product-removed.html" target="_blank">Product removed</a>       
+                        </li>
+                    </ul>
+                </li>
+                <li>
+                    <a class="govuk-link govuk-link--no-visited-state" href="/psd-revised-flow/no-products.html" target="_blank">There are no products</a> linked to this case (blank products page with statement - to design)
+                </li>                                                
+
             </ul>
             <p class="govuk-body">The "Edit this product" link(s) only appear if the user is in the product record owner team or the product record has no owner.</p>
             <p class="govuk-body">Within the tabbed areas, the statements "To edit the [details/images/attachments] for this product go to the full [product name] product record page" only appear if the user is in the product record owner team or the product record has no owner. Alternatively, we serve this statement instead: "Only the product record owner ([Owner name]) can edit these [details/images/attachments]".</p>
@@ -131,7 +153,7 @@
 
 
 
-we shouldn't search for or get results for products in the cases search, should we?
+<!-- we shouldn't search for or get results for products in the cases search, should we?-->
 
 
 
