--- a/app/views/psd-revised-flow/products-2-products.html
+++ b/app/views/psd-revised-flow/products-2-products.html
@@ -91,9 +91,7 @@
                 </div>
                 <div class="govuk-grid-column-one-quarter">
                     <div class="opss-text-align-right opss-margin-bottom-1-desktop">
-                        <a href="/psd-revised-flow/product-page.html" class="govuk-link govuk-link--no-visited-state govuk-!-font-size-19 opss-text-underline-offset">
-                            Edit this <span class="govuk-visually-hidden">Asda dishwashing liquid </span>product
-                        </a>
+                        <!-- no edit link -->
                     </div>
                 </div>
             </div>
@@ -113,8 +111,8 @@
                         <div class="govuk-summary-list__row">
                             <dt class="govuk-summary-list__key">Product record owner</dt>
                             <dd class="govuk-summary-list__value">
-                                <a href="#" class="govuk-link govuk-link--no-visited-state">
-                                    Lorem ipsum eppiciti
+                                <a href="/psd-revised-flow/contact-prod-owner.html" class="govuk-link govuk-link--no-visited-state">
+                                    Cardiff Trading Standards Services
                                 </a>
                             </dd>
 
@@ -133,7 +131,7 @@
                 </div>
             </div>
             
-            <div class="govuk-tabs opss-tabs opss-tabs--min-height-m" data-module="govuk-tabs">
+            <div class="govuk-tabs opss-tabs govuk-!-margin-bottom-2 opss-tabs--min-height-m" data-module="govuk-tabs">
                 <h3 class="govuk-tabs__title">
                   Information related to this <abbr>PSD</abbr> product record
                 </h3>
@@ -274,7 +272,7 @@
                     
                     <!-- only show this next line if the user is the product owner (or same team) -->
                     <p class="govuk-body-s govuk-!-margin-bottom-1 opss-secondary-text opss-text-align-right">
-                        To edit the details for this product go to the full <a href="/psd-revised-flow/product-page.html" class="govuk-link govuk-link--no-visited-state"><span class="govuk-visually-hidden">Asda dishwashing liquid </span>product record page</a>
+                        You cannot edit these details, but you can <a href="/psd-revised-flow/contact-prod-owner.html" class="govuk-link govuk-link--no-visited-state">contact the <span class="govuk-visually-hidden">psd-304 </span>product record owner</a><br class="opss-br-desktop"> with additional product information or corrections
                     </p>
               
                 </div>
@@ -285,9 +283,8 @@
                     <p class="govuk-body opss-secondary-text govuk-!-margin-bottom-7">These are the product images - they <strong>are not</strong> the case evidence images.</p>
                   
 
-
                     <p class="govuk-body-s govuk-!-margin-bottom-1 opss-secondary-text opss-text-align-right">
-                        To edit the images for this product go to the full <a href="/psd-revised-flow/product-page.html" class="govuk-link govuk-link--no-visited-state">product record page <span class="govuk-visually-hidden">to access its images</span></a>
+                        You cannot edit these images, but you can <a href="/psd-revised-flow/contact-prod-owner.html" class="govuk-link govuk-link--no-visited-state">contact the <span class="govuk-visually-hidden">psd-304 </span>product record owner<span class="govuk-visually-hidden"> about its images</span></a><br class="opss-br-desktop"> with additional product information or corrections 
                     </p>
               
                 </div>
@@ -296,7 +293,7 @@
                     <h4 class="govuk-heading-m">Product attachments</h4>
 
                     <p class="govuk-body-s govuk-!-margin-bottom-1 opss-secondary-text opss-text-align-right">
-                        To add or remove attachments for this product go to the full <a href="/psd-revised-flow/product-page.html" class="govuk-link govuk-link--no-visited-state">product record page <span class="govuk-visually-hidden">to access its attachments</span></a>
+                        You cannot edit these attachments, but you can <a href="/psd-revised-flow/contact-prod-owner.html" class="govuk-link govuk-link--no-visited-state">contact the <span class="govuk-visually-hidden">psd-304 </span>product record owner<span class="govuk-visually-hidden"> about its attachments</span></a><br class="opss-br-desktop"> with additional product information or corrections                         
                     </p>                  
               
                 </div>
@@ -307,10 +304,16 @@
               
                 </div>
             </div>
+
+            <div class="opss-text-align-right opss-margin-bottom-1-desktop">
+                <a href="/psd-revised-flow/remove-product.html" class="govuk-link govuk-link--no-visited-state govuk-!-font-size-16 opss-text-underline-offset">
+                    Remove this <span class="govuk-visually-hidden">Asda dishwashing liquid </span>product <span class="govuk-visually-hidden">from the case</span>
+                </a>
+            </div>             
     
         </section>
 
-        <hr class="govuk-section-break govuk-section-break--xl govuk-section-break--visible">
+        <hr class="govuk-section-break govuk-section-break--xl govuk-section-break--visible govuk-!-margin-top-6">
 
         <section>
 
@@ -343,7 +346,7 @@
                             <dt class="govuk-summary-list__key">Product record owner</dt>
                             <dd class="govuk-summary-list__value">
 
-                                    There is no owner. (It is editable)
+                                    No owner
 
                             </dd>
 
@@ -361,7 +364,7 @@
                 </div>
             </div>
             
-            <div class="govuk-tabs opss-tabs opss-tabs--min-height-m" data-module="govuk-tabs">
+            <div class="govuk-tabs opss-tabs govuk-!-margin-bottom-2 opss-tabs--min-height-m" data-module="govuk-tabs">
                 <h3 class="govuk-tabs__title">
                   Information related to this <abbr>PSD</abbr> product record
                 </h3>
@@ -496,7 +499,8 @@
                     
                     <!-- only show this next line if the user is the product owner (or same team) -->
                     <p class="govuk-body-s govuk-!-margin-bottom-1 opss-secondary-text opss-text-align-right">
-                        To edit the details for this product go to the full <a href="/psd-revised-flow/product-page.html" class="govuk-link govuk-link--no-visited-state"><span class="govuk-visually-hidden">Asda window cleaner </span>product record page</a>
+                        To edit the details for this product go to the full <a href="/psd-revised-flow/product-page.html" class="govuk-link govuk-link--no-visited-state"><span class="govuk-visually-hidden">psd-122 </span>product record page</a><span class="opss-hidden-desktop">.</span>
+                        <br class="opss-br-desktop"> By editing this product record your team will become the owner of this product record
                     </p>
               
                 </div>
@@ -507,7 +511,7 @@
                     <p class="govuk-body opss-secondary-text govuk-!-margin-bottom-7">These are the product images - they <strong>are not</strong> the case evidence images.</p>                        
 
                     <p class="govuk-body-s govuk-!-margin-bottom-1 opss-secondary-text opss-text-align-right">
-                        To edit the images for this product go to the full <a href="/psd-revised-flow/product-page.html" class="govuk-link govuk-link--no-visited-state">product record page <span class="govuk-visually-hidden">to access its images</span></a>
+                        To edit the images for this product go to the full <a href="/psd-revised-flow/product-page.html" class="govuk-link govuk-link--no-visited-state"><span class="govuk-visually-hidden">psd-122 </span>product record page <span class="govuk-visually-hidden">to access its images</span></a>
                     </p>
               
                 </div>
@@ -516,7 +520,7 @@
                     <h4 class="govuk-heading-m">Product attachments</h4>
 
                     <p class="govuk-body-s govuk-!-margin-bottom-1 opss-secondary-text opss-text-align-right">
-                        To add or remove attachments for this product go to the full <a href="/psd-revised-flow/product-page.html" class="govuk-link govuk-link--no-visited-state">product record page <span class="govuk-visually-hidden">to access its attachments</span></a>
+                        To add or remove attachments for this product go to the full <a href="/psd-revised-flow/product-page.html" class="govuk-link govuk-link--no-visited-state"><span class="govuk-visually-hidden">psd-122 </span>product record page <span class="govuk-visually-hidden">to access its attachments</span></a>
                     </p>                  
               
                 </div>
@@ -527,6 +531,12 @@
               
                 </div>
             </div>
+
+            <div class="opss-text-align-right opss-margin-bottom-1-desktop">
+                <a href="/psd-revised-flow/remove-product.html" class="govuk-link govuk-link--no-visited-state govuk-!-font-size-16 opss-text-underline-offset">
+                    Remove this <span class="govuk-visually-hidden">Asda window cleaner </span>product <span class="govuk-visually-hidden">from the case</span>
+                </a>
+            </div>             
     
         </section>        
 
