--- a/app/views/psd-revised-flow/products.html
+++ b/app/views/psd-revised-flow/products.html
@@ -110,9 +110,7 @@
                         <div class="govuk-summary-list__row">
                             <dt class="govuk-summary-list__key">Product record owner</dt>
                             <dd class="govuk-summary-list__value">
-                                <a href="#" class="govuk-link govuk-link--no-visited-state">
-                                    Lorem ipsum eppiciti
-                                </a>
+                                You are the product owner
                             </dd>
                             <!--dd class="govuk-summary-list__actions">
                                 <a href="#" class="govuk-link govuk-link--no-visited-state">
@@ -134,7 +132,7 @@
                 </div>
             </div>
             
-            <div class="govuk-tabs opss-tabs opss-tabs--min-height-m" data-module="govuk-tabs">
+            <div class="govuk-tabs opss-tabs govuk-!-margin-bottom-2 opss-tabs--min-height-m" data-module="govuk-tabs">
                 <h3 class="govuk-tabs__title">
                   Information related to this <abbr>PSD</abbr> product record
                 </h3>
@@ -275,7 +273,7 @@
                     
                     <!-- only show this next line if the user is the product owner (or same team) -->
                     <p class="govuk-body-s govuk-!-margin-bottom-1 opss-secondary-text opss-text-align-right">
-                        To edit the details for this product go to the full <a href="/psd-revised-flow/product-page.html" class="govuk-link govuk-link--no-visited-state"><span class="govuk-visually-hidden">Asda dishwashing liquid </span>product record page</a>
+                        To edit the details for this product go to the full <a href="/psd-revised-flow/product-page.html" class="govuk-link govuk-link--no-visited-state"><span class="govuk-visually-hidden">psd-304 </span>product record page</a>
                     </p>
               
                 </div>
@@ -286,7 +284,7 @@
                     <p class="govuk-body opss-secondary-text govuk-!-margin-bottom-7">These are the product images - they <strong>are not</strong> the case evidence images.</p>
 
                     <p class="govuk-body-s govuk-!-margin-bottom-1 opss-secondary-text opss-text-align-right">
-                        To edit the images for this product go to the full <a href="/psd-revised-flow/product-page.html" class="govuk-link govuk-link--no-visited-state">product record page <span class="govuk-visually-hidden">to access its images</span></a>
+                        To edit the images for this product go to the full <a href="/psd-revised-flow/product-page.html" class="govuk-link govuk-link--no-visited-state"><span class="govuk-visually-hidden">psd-304 </span>product record page <span class="govuk-visually-hidden">to access its images</span></a>
                     </p>
               
                 </div>
@@ -295,7 +293,7 @@
                     <h4 class="govuk-heading-m">Product attachments</h4>
 
                     <p class="govuk-body-s govuk-!-margin-bottom-1 opss-secondary-text opss-text-align-right">
-                        To add or remove attachments for this product go to the full <a href="/psd-revised-flow/product-page.html" class="govuk-link govuk-link--no-visited-state">product record page <span class="govuk-visually-hidden">to access its attachments</span></a>
+                        To add or remove attachments for this product go to the full <a href="/psd-revised-flow/product-page.html" class="govuk-link govuk-link--no-visited-state"><span class="govuk-visually-hidden">psd-304 </span>product record page <span class="govuk-visually-hidden">to access its attachments</span></a>
                     </p>                  
               
                 </div>
@@ -306,6 +304,12 @@
               
                 </div>
             </div>
+
+            <div class="opss-text-align-right opss-margin-bottom-1-desktop">
+                <a href="/psd-revised-flow/remove-product.html" class="govuk-link govuk-link--no-visited-state govuk-!-font-size-16 opss-text-underline-offset">
+                    Remove this <span class="govuk-visually-hidden">Asda dishwashing liquid </span>product <span class="govuk-visually-hidden">from the case</span>
+                </a>
+            </div>  
     
         </section>
 
