--- a/app/views/psd-revised-flow/index.html
+++ b/app/views/psd-revised-flow/index.html
@@ -116,7 +116,7 @@
                     </ul>
                 </li>
                 <li>
-                    <a class="govuk-link govuk-link--no-visited-state" href="/psd-revised-flow/contact-prod-owner.html" target="_blank">Email the product record owner</a> 
+                    <a class="govuk-link govuk-link--no-visited-state" href="/psd-revised-flow/contact-prod-owner.html" target="_blank">Email the product record owner</a>. The <abbr>Bcc</abbr> email will not include the product record owner's email address (no-replay@psd ?).
                     
                     <ul class="govuk-list govuk-list--bullet">
                         <li>
@@ -134,8 +134,11 @@
                     </ul>
                 </li>
                 <li>
-                    <a class="govuk-link govuk-link--no-visited-state" href="/psd-revised-flow/no-products.html" target="_blank">There are no products</a> linked to this case (blank products page with statement - to design)
-                </li>                                                
+                    <a class="govuk-link govuk-link--no-visited-state" href="/psd-revised-flow/no-products.html" target="_blank">There are no products</a> linked to this case (blank products page with statement - to design "&hellip;<a href="#">add a product to the case</a>&hellip;)
+                </li> 
+                <li>
+                    <a class="govuk-link govuk-link--no-visited-state" href="/psd-revised-flow/add-a-product.html" target="_blank">Add a product</a> to the case page. (Phase one version - simply ID entry).
+                </li>                                                                
 
             </ul>
             <p class="govuk-body">The "Edit this product" link(s) only appear if the user is in the product record owner team or the product record has no owner.</p>
