--- a/app/views/psd-revised-flow/remove-product.html
+++ b/app/views/psd-revised-flow/remove-product.html
@@ -29,7 +29,7 @@
                 </legend>
 
                 <div class="govuk-hint" id="remove-hint">
-                    The product record [name here] (psd-304) will be removed from the case.
+                    The product record <abbr>psd</abbr>-304 will be removed from the case.
                 </div>
     
                 <div class="govuk-radios govuk-!-padding-top-3 govuk-!-padding-bottom-1">
@@ -53,7 +53,7 @@
         
         <div class="govuk-button-group">
             <button class="govuk-button" data-module="govuk-button">
-                Save
+                Save and continue
             </button>
 
             <a class="govuk-link govuk-link--no-visited-state" href="/psd-revised-flow/products.html">Cancel</a>
