--- a/app/views/psd-revised-flow/products.html
+++ b/app/views/psd-revised-flow/products.html
@@ -19,7 +19,7 @@
     </div>
     <div class="govuk-grid-column-one-quarter govuk-!-margin-bottom-4">
         <div class="opss-text-align-right">
-            <a href="#" class="govuk-link govuk-link--no-visited-state govuk-!-font-size-19 opss-text-underline-offset">
+            <a href="/psd-revised-flow/add-a-product.html" class="govuk-link govuk-link--no-visited-state govuk-!-font-size-19 opss-text-underline-offset">
                 Add a product to the case
             </a>
         </div>
