--- a/app/views/psd-revised-flow/case-trading-stds-landing-different-team.html
+++ b/app/views/psd-revised-flow/case-trading-stds-landing-different-team.html
@@ -128,7 +128,7 @@
                     Case owner
                 </dt>
                 <dd class="govuk-summary-list__value">
-                    Darren Harridence - Renfrewshire Council
+                    Darren Harridence
                 </dd>
             </div>
             <div class="govuk-summary-list__row">
