--- a/app/views/psd-revised-flow/contact-prod-owner.html
+++ b/app/views/psd-revised-flow/contact-prod-owner.html
@@ -36,7 +36,7 @@
                     <details class="govuk-details govuk-!-margin-bottom-7 opss-details--sm" data-module="govuk-details">
                         <summary class="govuk-details__summary">
                             <span class="govuk-details__summary-text">
-                                Help with emailing the owner
+                                Help with emailing the product record owner
                             </span>
                         </summary>
                         <div class="govuk-details__text">
