--- a/app/views/psd-revised-flow/product-added.html
+++ b/app/views/psd-revised-flow/product-added.html
@@ -17,7 +17,7 @@
 
     <div class="govuk-notification-banner__content">
       <h3 class="govuk-notification-banner__heading">
-        The product record was removed from the case
+        The product record was added to the case
       </h3>
     </div>
 
