--- a/app/views/psd-revised-flow/case-opss-landing-team-not-added-to-case.html
+++ b/app/views/psd-revised-flow/case-opss-landing-team-not-added-to-case.html
@@ -112,7 +112,7 @@
                     Case owner
                 </dt>
                 <dd class="govuk-summary-list__value">
-                    Darren Harridence - Renfrewshire Council
+                    Darren Harridence
                 </dd>
             </div>
             <div class="govuk-summary-list__row">
