--- a/app/views/psd-revised-flow/case-opss-landing.html
+++ b/app/views/psd-revised-flow/case-opss-landing.html
@@ -160,7 +160,7 @@
                     Case owner
                 </dt>
                 <dd class="govuk-summary-list__value">
-                    Darren Harridence - Renfrewshire Council
+                    Darren Harridence
                 </dd>
                 <dd class="govuk-summary-list__actions">
                     <a href="#" class="govuk-link govuk-link--no-visited-state">
