--- a/app/views/psd-revised-flow/supporting-information.html
+++ b/app/views/psd-revised-flow/supporting-information.html
@@ -17,9 +17,16 @@
 
         <p class="govuk-body opss-secondary-text govuk-!-margin-bottom-7">Lorem ipsum dolor sit amet consectetur adipisicing elit. Impedit, sunt? Harum expedita vero ea incidunt iusto? Nisi, illo tempore nemo maxime  voluptas amet esse.</p>
     </div>
-    <div class="govuk-grid-column-one-quarter govuk-!-margin-bottom-2">
 
-        <ul role="menu" class="govuk-list opss-float-right-desktop opss-text-align-right">
+    <div class="govuk-grid-column-one-quarter govuk-!-margin-bottom-4">
+        <div class="opss-text-align-right">
+            <a href="#" class="govuk-link govuk-link--no-visited-state govuk-!-font-size-19 opss-text-underline-offset">
+                Add a comment
+            </a>
+        </div>
+    </div>
+
+        <!--ul role="menu" class="govuk-list opss-float-right-desktop opss-text-align-right">
             <li role="menuitem" class="govuk-!-margin-bottom-0">
                 <a href="#" class="govuk-link govuk-link--no-visited-state govuk-!-font-size-16 opss-text-underline-offset">
                     Add an Accident or Incident
@@ -50,9 +57,7 @@
                     Add Other
                 </a>
             </li>
-        </ul>
-
-    </div>
+        </ul-->
 
 </div>
 
@@ -67,61 +72,60 @@
 
         <ul class="govuk-list opss-left-nav">
             <li>
-                <a href="/psd-revised-flow/case.html" class="govuk-link govuk-link--no-visited-state" aria-current="page">Case</a>
+                <a href="/psd-revised-flow/case.html" class="govuk-link govuk-link--no-visited-state">Case</a>
             </li>
             <li>
-                <a href="/psd-revised-flow/products.html" class="govuk-link govuk-link--no-visited-state">Products <span>(2)</span></a>
+                <a href="/psd-revised-flow/products.html" class="govuk-link govuk-link--no-visited-state">Products <span>(1)</span></a>
             </li>
             <li>
                 <a href="/psd-revised-flow/businesses.html" class="govuk-link govuk-link--no-visited-state">Businesses <span>(2)</span></a>
             </li>
             <li>
-                <a href="/psd-revised-flow/images.html" class="govuk-link govuk-link--no-visited-state">Images <span>(7)</span></a>
+                <a href="/psd-revised-flow/images.html" class="govuk-link govuk-link--no-visited-state">Images <span>(3)</span></a>
             </li>
             <li class="opss-left-nav__active">
-                <a href="/psd-revised-flow/supporting-information.html#page-content" class="govuk-link govuk-link--no-visited-state">Supporting information <span>(9)</span></a>
+                <a href="/psd-revised-flow/supporting-information.html#page-content" class="govuk-link govuk-link--no-visited-state" aria-current="page">Supporting information <span>(9)</span></a>
 
                 <ul class="govuk-list">
                     <li>
-                        <a href="/psd-revised-flow/accidents-and-incidents#accidents" class="govuk-link govuk-link--no-visited-state">Accidents and incidents <span>(2)</span></a>
+                        <a href="#accidents" class="govuk-link govuk-link--no-visited-state">Accidents and incidents <span>(2)</span></a>
                     </li>
                     <li>
-                        <a href="/psd-revised-flow/supporting-information.html#corrective" class="govuk-link govuk-link--no-visited-state">
+                        <a href="#corrective" class="govuk-link govuk-link--no-visited-state">
                             Corrective actions <span>(1)</span>
                         </a>
                     </li>
                     <li>
-                        <a href="/psd-revised-flow/supporting-information.html#assessment" class="govuk-link govuk-link--no-visited-state">
+                        <a href="#assessment" class="govuk-link govuk-link--no-visited-state">
                             Risk assessments <span>(2)</span>
                         </a>
                     </li>
                     <li>
-                        <a href="/psd-revised-flow/supporting-information.html#correspondence" class="govuk-link govuk-link--no-visited-state">
+                        <a href="#correspondence" class="govuk-link govuk-link--no-visited-state">
                             Correspondence <span>(2)</span>
                         </a>
                     </li>
                     <li>
-                        <a href="/psd-revised-flow/supporting-information.html#testresult" class="govuk-link govuk-link--no-visited-state">
+                        <a href="/#testresult" class="govuk-link govuk-link--no-visited-state">
                             Test results <span>(1)</span>
                         </a>
                     </li>
                     <li>
-                        <a href="/psd-revised-flow/supporting-information.html#other" class="govuk-link govuk-link--no-visited-state">
+                        <a href="#other" class="govuk-link govuk-link--no-visited-state">
                             Other <span>(1)</span>
                         </a>
                     </li>
                 </ul>
             </li>
             <li>
-                <a href="activity.html" class="govuk-link govuk-link--no-visited-state">Activity</a>  <!-- have add comment on this page -->
+                <a href="/psd-revised-flow/activity.html" class="govuk-link govuk-link--no-visited-state">Activity</a>  
             </li>
         </ul>
     </nav>
 
     <section id="page-content" role="region" class="govuk-grid-column-three-quarters">
-
-        <p class="govuk-body-l">content</p>
-
+        
+        <p class="govuk-body">On this page 'Add' links for each of the informtion types will be inline with each section.</p>
 
     </section>
 
